--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;600&display=swap"
       rel="stylesheet"
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>crypto safe wallet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
